v3.2 - Исправил регулярное обновление - Выделил тип недели в отчете - Сделал обновление расписания в начале нового семестра - Исправил вывод клавиатуры - Исправил некоторые слова в сообщениях - Подправил тест