@@ -45,41 +45,41 @@ class AnyUtilsTest {
     @Test
     @Disabled
     void removeOldSubjectsDocuments_isCorrect () {
-        final List<SubjectData> oldSubjectData = List.of(
-                new SubjectData().setMessagesData(List.of())
+        List<SubjectData> oldSubjectData = Arrays.asList(
+                new SubjectData().setMessagesData(Arrays.asList())
                         .setName("a").setDocumentNames(mutableSetOf("0abc", "0abcd", "0abcde")),
-                new SubjectData().setMessagesData(List.of())
+                new SubjectData().setMessagesData(Arrays.asList())
                         .setName("b").setDocumentNames(mutableSetOf("1abc", "1abcd", "1abcde")),
-                new SubjectData().setMessagesData(List.of())
+                new SubjectData().setMessagesData(Arrays.asList())
                         .setName("c").setDocumentNames(mutableSetOf("2abc", "2abcd", "2abcde")),
-                new SubjectData().setMessagesData(List.of())
+                new SubjectData().setMessagesData(Arrays.asList())
                         .setName("d").setDocumentNames(mutableSetOf("3abc", "3abcd", "3abcde"))
         );
 
-        final List<SubjectData> newSubjectData = List.of(
-                new SubjectData().setMessagesData(List.of()) // Нет изменений
+        List<SubjectData> newSubjectData = Arrays.asList(
+                new SubjectData().setMessagesData(Arrays.asList()) // Нет изменений
                         .setName("a").setDocumentNames(mutableSetOf("0abc", "0abcd", "0abcde")),
 
-                new SubjectData().setMessagesData(List.of())  // Удалили элемент
+                new SubjectData().setMessagesData(Arrays.asList())  // Удалили элемент
                         .setName("b").setDocumentNames(mutableSetOf("1abc", "1abcd")),
 
-                new SubjectData().setMessagesData(List.of()) // Добавили элемент
+                new SubjectData().setMessagesData(Arrays.asList()) // Добавили элемент
                         .setName("c").setDocumentNames(mutableSetOf("2abc", "2abcd", "2abcde", "2abcdef")),
 
-                new SubjectData().setMessagesData(List.of())  // Удалили и добавили элементы
+                new SubjectData().setMessagesData(Arrays.asList())  // Удалили и добавили элементы
                         .setName("d").setDocumentNames(mutableSetOf("3abcd", "3abcde", "3abcdef"))
         );
 
-        final List<SubjectData> postSubjectData = Utils.removeOldDocuments(oldSubjectData, newSubjectData);
+        List<SubjectData> postSubjectData = Utils.removeOldDocuments(oldSubjectData, newSubjectData);
 
-        assertEquals(List.of(
-                new SubjectData().setMessagesData(List.of())
+        assertEquals(Arrays.asList(
+                new SubjectData().setMessagesData(Arrays.asList())
                         .setName("a").setDocumentNames(mutableSetOf("0abc", "0abcd", "0abcde")),
-                new SubjectData().setMessagesData(List.of())
+                new SubjectData().setMessagesData(Arrays.asList())
                         .setName("b").setDocumentNames(mutableSetOf("1abc", "1abcd", "1abcde")),
-                new SubjectData().setMessagesData(List.of())
+                new SubjectData().setMessagesData(Arrays.asList())
                         .setName("c").setDocumentNames(mutableSetOf("2abc", "2abcd", "2abcde")),
-                new SubjectData().setMessagesData(List.of())
+                new SubjectData().setMessagesData(Arrays.asList())
                         .setName("d").setDocumentNames(mutableSetOf("3abc", "3abcd", "3abcde"))
                 ),
                 newSubjectData); // newSubjectData не изменилась
